--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <button onclick="generateInvoice()">Generate Invoice</button>
 <br><br>
-<!-- <button onclick="resetInvoiceCounter()">Reset Invoice Number</button> -->
+<button onclick="resetInvoiceCounter()">Reset Invoice Number</button>
 
 <h3>Regenerate Existing Invoice</h3>
 <label>
@@ -95,3 +95,4 @@ function getInvoiceNo() {
 
 </body>
 </html>
+
